--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ appnope = "==0.1.0"
 asgiref = "==3.2.7"
 backcall = "==0.1.0"
 decorator = "==4.4.2"
+django = "==3.0.7"
 django-cors-headers = "==3.3.0"
 django-rest-framework = "==0.1.0"
 djangorestframework = "==3.11.0"
@@ -25,15 +26,9 @@ six = "==1.14.0"
 sqlparse = "==0.3.1"
 traitlets = "==4.3.3"
 wcwidth = "==0.1.9"
-Django = "==3.0.7"
 ipython_genutils = "==0.2.0"
 Pygments = "==2.6.1"
-django-allauth = "==0.42.0"
-google-api-python-client = "*"
-google-auth-httplib2 = "*"
-google-auth-oauthlib = "*"
-requests = "*"
+django-allauth = "*"
 python-dateutil = "*"
-
-[requires]
-python_version = "3.7"
+google-api-python-client = "*"
+google-auth-oauthlib = "*"
